syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.file";
option java_outer_classname = "ErrorsProto";

package file;

// FileSystemError is a message that giving details of errors occurs when
// requests are handled by server. FileSystemError should be returned with 
// operation response.
//
// Status should be one of the one of the FileSystemErrorStatus.
// Error message should be detailed message that explains what happened.
message FileSystemError {
  enum FileSystemErrorStatus {
    ACCESS_DENIED = 0;
    DIRECTORY_NOT_EMPTY = 1;
    FILE_ALREADY_EXSITS = 2;
    INVALID_PATH = 3;
    NO_SUCH_FILE = 4;
    NOT_DIRECTORY = 5;
    // Our file system does not support update now.
    // UPDATE_ON_READ_ONLY = 6;
  }
  FileSystemErrorStatus status = 1;
  string error_message = 2;
}
